--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,9 +56,9 @@ jobs:
         name: artifacts
     - name: Deploy to Sandbox
       env:
-        USERNAME: "Gagan_trisul"
-        PASSWORD: "P@55w0rd@1234"
-        KEY: "MyMuleSoftKey"
+        USERNAME: Gagan_trisul
+        PASSWORD: P@55w0rd@1234
+        KEY: MyMuleSoftKey
       run: |
         artifactName=$(ls *.jar | head -1)
         mvn deploy -DskipMunitTests -DmuleDeploy \
